--- a/sources/javascripts/scripts/user/user-create/user-create.tmpl.html
+++ b/sources/javascripts/scripts/user/user-create/user-create.tmpl.html
@@ -1,6 +1,5 @@
 <div class="row">
-	<div class="large-6 columns"></div>
-	<div class="large-6 columns">
+	<div class="large-6 large-offset-3 columnss">
 		<h3>Register</h3>
 
 		<form ng-submit="userCreateCtrl.storeUser(user)" name="form">
@@ -11,13 +10,17 @@
 							'small-10': form.first_name.$invalid && form.first_name.$dirty,
 							'small-12': !(form.first_name.$invalid && form.first_name.$dirty)
 						}">
-							<input ng-model="user.first_name" name="first_name" required placeholder="Your first name" type="text">
+							<input ng-model="user.first_name" ng-class="{
+								'no-border-right': form.first_name.$invalid && form.first_name.$dirty
+							}" name="first_name" required placeholder="Your first name" type="text">
 							<small class="error" ng-show="form.first_name.$invalid && form.first_name.$dirty">
 								You should enter a first name!
 							</small>
 						</div>
 						<div class="small-2 columns" ng-show="form.first_name.$invalid && form.first_name.$dirty">
-							<span class="postfix"><i class="fa fa-warning color-red"></i></span>
+							<span class="postfix" ng-class="{
+								'no-border-left': form.first_name.$invalid && form.first_name.$dirty
+							}"><i class="fa fa-warning color-red"></i></span>
 						</div>
 					</div>
 				</div>
@@ -27,13 +30,17 @@
 							'small-10': form.last_name.$invalid && form.last_name.$dirty,
 							'small-12': !(form.last_name.$invalid && form.last_name.$dirty)
 						}">
-							<input ng-model="user.last_name" name="last_name" required placeholder="Your last name" type="text">
+							<input ng-model="user.last_name" ng-class="{
+								'no-border-right': form.last_name.$invalid && form.last_name.$dirty
+							}" name="last_name" required placeholder="Your last name" type="text">
 							<small class="error" ng-show="form.last_name.$invalid && form.last_name.$dirty">
 								You should enter a last name!
 							</small>
 						</div>
 						<div class="small-2 columns" ng-show="form.last_name.$invalid && form.last_name.$dirty">
-							<span class="postfix"><i class="fa fa-warning color-red"></i></span>
+							<span class="postfix" ng-class="{
+								'no-border-left': form.last_name.$invalid && form.last_name.$dirty
+							}"><i class="fa fa-warning color-red"></i></span>
 						</div>
 					</div>
 				</div>
@@ -46,13 +53,23 @@
 							'small-11': form.email.$invalid && form.email.$dirty,
 							'small-12': !(form.email.$invalid && form.email.$dirty)
 						}">
-							<input ng-model="user.email" name="email" required placeholder="Your email" type="email">
-							<small class="error" ng-show="form.email.$invalid && form.email.$dirty">
-								You should enter a valid email!
+							<input ng-model="user.email" unique-email ng-class="{
+								'no-border-right': form.email.$invalid && form.email.$dirty
+							}" name="email" required placeholder="Your email" type="email">
+							<small class="error error-checking" ng-show="form.email.$pending.uniqueEmail">
+								Checking...
+							</small>
+							<small class="error" ng-show="form.email.$error.uniqueEmail">
+								Someone else is using this e-mail!
+							</small>
+							<small class="error" ng-show="form.email.$error.required && form.email.$dirty">
+								You should enter a email!
 							</small>
 						</div>
 						<div class="small-1 columns" ng-if="form.email.$invalid && form.email.$dirty">
-							<span class="postfix"><i class="fa fa-warning color-red"></i></span>
+							<span class="postfix" ng-class="{
+								'no-border-left': form.email.$invalid && form.email.$dirty
+							}"><i class="fa fa-warning color-red"></i></span>
 						</div>
 					</div>
 				</div>
@@ -65,13 +82,15 @@
 							'small-11': form.password.$invalid && form.password.$dirty,
 							'small-12': !(form.password.$invalid && form.password.$dirty)
 						}">
-							<input ng-model="user.password" name="password" required placeholder="Your password" type="password">
+							<input ng-model="user.password" ng-class="{
+								'no-border-right': form.password.$invalid && form.password.$dirty
+							}" name="password" required placeholder="Your password" type="password">
 							<small class="error" ng-show="form.password.$invalid && form.password.$dirty">
 								You should enter a password!
 							</small>
 						</div>
 						<div class="small-1 columns" ng-if="form.password.$invalid && form.password.$dirty">
-							<span class="postfix"><i class="fa fa-warning color-red"></i></span>
+							<span class="postfix" for="password"><i class="fa fa-warning color-red"></i></span>
 						</div>
 					</div>
 				</div>
@@ -79,7 +98,7 @@
 
 			<div class="row">
 				<div class="small-12 columns">
-					<button class="button" type="submit">Do me!</button>
+					<button class="button" type="submit" ng-disabled="form.$invalid || form.$pending">Do me!</button>
 				</div>
 			</div>
 		</form>
