--- a/sources/javascripts/scripts/user/user-profile/user-profile.tmpl.html
+++ b/sources/javascripts/scripts/user/user-profile/user-profile.tmpl.html
@@ -1,1 +1,19 @@
-<div></div>
+<div class="row">
+	<div class="small-12 columns">
+		<h3 ng-bind="user.name"></h3>		
+	</div>
+</div>
+
+<div class="row">
+	<div class="small-4 columns">
+		<ul>
+			<li ui-sref-active="active">
+				<a ui-sref=".pastes">Pastes</a>
+			</li>
+			<li ui-sref-active="active">
+				<a ui-sref=".messages">Messages</a>
+			</li>
+		</ul>
+	</div>
+	<div class="small-8 columns" ui-view></div>
+</div>
