--- a/sources/javascripts/scripts/user/user-profile/user-profile.tmpl.html
+++ b/sources/javascripts/scripts/user/user-profile/user-profile.tmpl.html
@@ -6,7 +6,7 @@
 
 <div class="row">
 	<div class="small-4 columns">
-		<ul>
+		<ul class="side-nav">
 			<li ui-sref-active="active">
 				<a ui-sref=".pastes">Pastes</a>
 			</li>
