--- a/sources/javascripts/scripts/paste/paste-create/paste-create.tmpl.html
+++ b/sources/javascripts/scripts/paste/paste-create/paste-create.tmpl.html
@@ -1,14 +1,26 @@
 <form name="form" ng-submit="pasteCreateCtrl.storePaste(paste)">
-	<textarea ng-codemirror="{
-		mode: 'javascript',
-		lineNumbers: true,
-		tabSize: 2,
-		indentWithTabs: true,
-		lineWrapping: true
-	}"
-	paste-editor-leftbar
-	data-template-url="paste/paste-create/paste-editor-leftbar-directive.tmpl.html"
-	ng-model="paste.code"
-	cols="30"
-	rows="10"></textarea>
+	<div class="editor-topbar" ng-init="collapsed = false">
+		<ul class="off-canvas-list" ng-hide="collapsed">
+			<li ng-click="collapsed = true"><label>Open topbar</label></li>
+		</ul>
+		<ul class="off-canvas-list" ng-show="collapsed">
+			<li><label>Topbar</label></li>
+			<li><input ng-model="paste.title" placeholder="Paste title" type="text"></li>
+			<li><label>Options</label></li>
+			<li ng-click="pasteCreateCtrl.storePaste(paste)"><a><i class="fa fa-save"></i> Salvar</a></li>
+			<li ng-click="collapsed = false"><a><i class="fa fa-close"></i> Fechar</a></li>
+		</ul>
+	</div>
+	<div class="editor-column">
+		<textarea ng-codemirror="{
+			mode: 'javascript',
+			lineNumbers: true,
+			tabSize: 2,
+			indentWithTabs: true,
+			lineWrapping: true
+		}"
+		ng-model="paste.code"
+		cols="30"
+		rows="10"></textarea>
+	</div>
 </form>
