--- a/sources/javascripts/scripts/home/home-index/home-index.tmpl.html
+++ b/sources/javascripts/scripts/home/home-index/home-index.tmpl.html
@@ -1,5 +1,3 @@
-<h1>Welcome!</h1>
-
 <div class="row">
 	<div class="large-2 columns">
 		<h5>Categories</h5>
@@ -17,7 +15,7 @@
 		</div>
 		<div class="row" ng-repeat="post in posts" ng-if="posts.length">
 			<div class="small-12 columns">
-				<h6><a href="">{{ ::post.title }}</a></h6>
+				<h6><a ui-sref="post.detail({ post: post.id })">{{ ::post.title }}</a></h6>
 				<p>{{ ::post.body }}</p>
 			</div>
 		</div>
